# mcp-crash-course

./: langchain_multiserver_client.py  main.py  pyproject.toml
servers/: weather_server.py
